Revert "change auto start script"
This reverts commit 5a34a084ed0b85cb0aa45697a7781f027bbc820f.